src/Test/Fixtures/Good/TypeQualifier/affineScratchInferredQubit.lf
let affine scratch q = qalloc();