src/Test/Fixtures/Bad/TypeQualifier/missingBindingNameAfterScratchLinear.lf
let scratch linear : qubit = qalloc();
